# socat

./: .pre-commit-config.yaml  CHANGES  CHANGES.ISO-8859-1  COPYING.OpenSSL  EXAMPLES  FILES  Makefile.in  compat.h  configure.ac  daemon.sh  dalan.c  filan.c  filan_main.c  ftp.sh  proxy.sh  proxyecho.sh  pyproject.toml  readline-test.sh  readline.sh  socat-broker.sh  socat-chain.sh  socat-mux.sh  socat.c  socat_buildscript_for_android.sh  socks4a-echo.sh  socks4echo.sh  sysutils.c  test.sh  xio-ascii.c  xio-ip.c  xio-ip6.c  xio-ipapp.c  xio-openssl.c  xio-socket.c  xio-stdio.c  xio-tcpwrap.c  xio-termios.c  xio-udp.c  xio-unix.c  xio.h  (+3 more)
.github/workflows/: pre-commit.yml
doc/: socat-openssltunnel.html  socat.yo
