[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

[tool.codespell]
ignore-words-list = """
stdio,master,creat,intervall,tim,ro,te,od,nam,tolen,inport,slave,wronly,dont,anull,musl,childs,sodo,wan,uint,objext,blackhat,ser,strat,clos,cant,tbe
"""
skip = """./.*,*/.metadata,*.xml"""
quiet-level=2
ignore-regex = '\\[fnrstv]'
builtin = "clear,rare,informal,usage,code,names"

[tool.setuptools]
include-package-data = false
